--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+<head th:fragment="header(title)">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+  <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.js}"></script>
+  <script type="text/javascript" th:src="@{/js/common.js}"></script>
+  <title>[[${title}]]</title>
 </head>
+
 <body>
 <th th:fragment="column_link(fieldName, labelName)" scope="col">
   <a th:href="@{'/users/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${sortField != fieldName ? sortDir : reversedSort} + ${keyword != null ? '&keyword=' + keyword : ''}}" class="text-white text-decoration-none">[[${labelName}]]</a>
   <span th:if="${sortField == fieldName}" th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span></th>
 
 <a th:fragment="link_to_another_page(pageNum, pageLabel)" class="page-link" th:href="@{'/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">[[${pageLabel}]]</a>
+
+<li th:fragment="nav_item(navLink, navText, isActive)" class="nav-item">
+  <a th:class="'nav-link' + ${isActive == navLink ? ' active' : ''}" th:href="@{'/' + ${navLink}}">[[${navText}]]</a>
+</li>
+
+<div th:fragment="footer">
+  <p>Shopme - Copyright &copy; Shopme</p>
+</div>
 </body>
 </html>
