--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user-form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user-form.html
@@ -1,98 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-  <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
-  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-  <title>Shopme - [[${title}]]</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<head th:replace="~{fragments :: header(${title})}">
 </head>
 <body>
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" th:href="@{/}">
-        <img th:src="@{/images/logo-no-background.png}" width="100">
-      </a>
-
-      <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
-              data-bs-target="#navbarMain">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse ms-2 ms-lg-0" id="navbarMain">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" th:href="@{/users}">
-              Users
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/categires}">
-              Categories
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/brands}">
-              Brands
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/products}">
-              Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/customers}">
-              Customers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/shipping}">
-              Shipping
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/orders}">
-              Orders
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/report}">
-              Sale Report
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/articles}">
-              Articles
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/menus}">
-              Menus
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/settings}">
-              Settings
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div th:replace="~{navigation :: menu('users')}"></div>
+  <div th:replace="~{navigation :: popup}"></div>
   <div class="mt-2 mb-5">
     <h1>Manage Users | [[${title}]]</h1>
   </div>
 
   <div class="mx-auto border border-secondary rounded p-3" style="max-width: 550px">
-    <form th:action="@{/users/save}" method="post" th:object="${user}" onsubmit="return checkEmailUnique(this)" enctype="multipart/form-data">
+    <form th:action="@{'/users/save' + ${user.photo == null ? '' : '?photo=' + user.photo}}" method="post" th:object="${user}" onsubmit="return checkEmailUnique(this)" enctype="multipart/form-data">
       <input id="idUser" type="hidden" th:field="*{id}">
       <div class="form-group row mb-3">
         <label for="emailInput" class="col-md-2 col-form-label">E-mail</label>
@@ -156,16 +76,16 @@
     </form>
   </div>
 
-  <div class="modal" id="modalDialog">
+  <div class="modal" id="modalDialog2">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="modalTitle">Warning</h4>
+          <h4 class="modal-title" id="modalTitle2">Warning</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal">
           </button>
         </div>
         <div class="modal-body">
-          <p id="modalBody"></p>
+          <p id="modalBody2"></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
@@ -174,11 +94,8 @@
     </div>
   </div>
 
+  <div th:replace="~{fragments :: footer}"></div>
 
-
-  <div class="text-center">
-    <p>Shopme - Copyright &copy;</p>
-  </div>
 </div>
 </body>
 <script type="text/javascript">
@@ -231,9 +148,9 @@
   }
 
   function showModalDialog(title, body) {
-    $("#modalTitle").text(title);
-    $("#modalBody").text(body);
-    $("#modalDialog").modal("show")
+    $("#modalTitle2").text(title);
+    $("#modalBody2").text(body);
+    $("#modalDialog2").modal("show")
   }
 
 
