--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -1,98 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <title>Shopme - Users</title>
-</head>
+<head th:replace="~{fragments :: header('Shopme - Users')}"></head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/logo-no-background.png}" width="100">
-            </a>
 
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
-                    data-bs-target="#navbarMain">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <div th:replace="~{navigation :: menu('users')}"></div>
 
-            <div class="collapse navbar-collapse ms-2 ms-lg-0" id="navbarMain">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/users}">
-                            Users
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/categires}">
-                            Categories
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/brands}">
-                            Brands
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/products}">
-                            Products
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/customers}">
-                            Customers
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/shipping}">
-                            Shipping
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}">
-                            Orders
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/report}">
-                            Sale Report
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/articles}">
-                            Articles
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menus}">
-                            Menus
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/settings}">
-                            Settings
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="mt-2 mb-3">
         <h1>Manage User</h1>
         <a class="btn btn-primary" th:href="@{/users/new}"><span class="btn-text">Create new user</span>  <span class="ms-1 fas fa-plus"></span></a>
         <a class="mx-2 btn btn-success" th:href="@{/users/export/csv}"><span class="btn-text">Export to csv</span>  <span class="ms-1 fas fa-file-csv"></span></a>
         <a class="btn btn-success mt-lg-0" th:href="@{/users/export/excel}"><span class="btn-text">Export to xlsx</span>  <span class="mx-1 fas fa-file-excel"></span></a>
-        <a class="btn btn-danger ms-md-3 ms-2" th:href="@{/users/export/pdf}"><span class="btn-text">Export to pdf</span>  <span class="mx-1 fas fa-file-pdf"></span></a>
+        <a class="btn btn-danger ms-2" th:href="@{/users/export/pdf}"><span class="btn-text">Export to pdf</span>  <span class="mx-1 fas fa-file-pdf"></span></a>
     </div>
 
     <div style="max-width: 400px">
@@ -176,24 +95,7 @@
         <span>No users was found</span>
     </div>
 
-
-    <div class="modal" id="modalDialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="modalTitle"></h4>
-                    <button class="btn btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="modalBody"></p>
-                </div>
-                <div class="modal-footer">
-                    <a class="btn btn-danger" id="deleteModalBtn">Delete</a>
-                    <a class="btn btn-dark" id="cancelModalBtn" data-bs-dismiss="modal">Cancel</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div th:replace="~{navigation :: popup}"></div>
     <div th:if="${totalPage > 1}">
         <nav>
             <ul class="pagination justify-content-center">
@@ -225,9 +127,7 @@
         </nav>
     </div>
 
-    <div class="text-center">
-        <p>Shopme - Copyright &copy;</p>
-    </div>
+    <div th:replace="~{fragments :: footer}"></div>
 </div>
 
 <script type="text/javascript">
@@ -238,18 +138,18 @@
             userId = $(this).attr("userId");
             body = "Do you really want to delete user id " + userId + ": " + userName
             showModalDialog("Deleting Confirm", body);
-            $("#deleteModalBtn").attr("href", $(this).attr("href"));
+            $("#continueModalBtn").attr("href", $(this).attr("href"));
         })
+
+        $('#clearBtn').click(function () {
+            window.location = "[[@{/users}]]";
+        });
     });
 
-    $('#clearBtn').click(function () {
-        window.location = "[[@{/users}]]";
-    });
     function showModalDialog(title, body) {
         $('#modalTitle').text(title);
         $('#modalBody').text(body);
         $('#modalDialog').modal("show");
-
     }
 </script>
 </body>
