--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -23,7 +23,7 @@
   <a th:class="'nav-link' + ${isActive == navLink ? ' active' : ''}" th:href="@{'/' + ${navLink}}">[[${navText}]]</a>
 </li>
 
-<div th:fragment="footer">
+<div th:fragment="footer" class="text-center">
   <p>Shopme - Copyright &copy; Shopme</p>
 </div>
 </body>
