--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
@@ -23,6 +23,10 @@
             <div class="mb-3">Please login to access</div>
             <input name="username" class="form-control" type="email" placeholder="E-mail" required minlength="8" maxlength="128">
             <input name="password" class="form-control my-3" type="password" placeholder="Password" required minlength="8" maxlength="20">
+            <p>
+                <input type="checkbox" name="remember-me">
+                &nbsp;Remember me
+            </p>
             <input type="submit" class="btn btn-primary" value="Login">
         </div>
     </form>
