commit them page error va refactor controllers

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{fragments :: header('Shopme - Homepage')}"></head>
 <body>
 <div class="container-fluid">
     <div th:replace="~{navigation :: menu('')}"></div>
     <div>
-        <h1>Welcome Admin Homepage</h1>
+        <h1>Shopme Control Panel</h1>
+        <p>Welcome <a th:href="@{/account}" class="text-primary" sec:authentication="principal.fullName">
+            &nbsp;
+            <span sec:authentication="principal.authorities"></span>
+        </a></p>
     </div>
     <div th:replace="~{navigation :: popup}"></div>
 
