--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/404.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/404.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
   <div th:replace="~{navigation :: menu('')}"></div>
   <div>
-    <h1>Sorry, The resource could not be founded!</h1>
+    <h1>Sorry, The resource could not be founded! 404</h1>
   </div>
   <div th:replace="~{fragments :: footer}"></div>
 </div>
