--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/500.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/500.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div th:replace="~{navigation :: menu('')}"></div>
     <div>
-        <h1>Sorry, some errors has occurred!</h1>
+        <h1>Sorry, some errors has occurred! 500</h1>
     </div>
     <div th:replace="~{fragments :: footer}"></div>
 </div>
