--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-<th th:fragment="column_link(fieldName, labelName)" scope="col">
-  <a th:href="@{'/users/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${sortField != fieldName ? sortDir : reversedSort} + ${keyword != null ? '&keyword=' + keyword : ''}}" class="text-white text-decoration-none">[[${labelName}]]</a>
+<th th:fragment="column_link(module, fieldName, labelName)" scope="col">
+  <a th:href="@{'/' + ${module} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${sortField != fieldName ? sortDir : reversedSort} + ${keyword != null ? '&keyword=' + keyword : ''}}" class="text-white text-decoration-none">[[${labelName}]]</a>
   <span th:if="${sortField == fieldName}" th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span></th>
 
 <a th:fragment="link_to_another_page(pageNum, pageLabel)" class="page-link" th:href="@{'/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">[[${pageLabel}]]</a>
