--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -54,13 +54,13 @@
         <table class="table table-hover table-bordered table-striped text-center">
             <thead class="table-dark text-center">
             <tr>
-                <th th:replace="~{fragments :: column_link('id', 'ID User')}"></th>
+                <th th:replace="~{fragments :: column_link('users', 'id', 'ID User')}"></th>
                 <th scope="col">Photos</th>
-                <th th:replace="~{fragments :: column_link('email', 'Email')}"></th>
-                <th th:replace="~{fragments :: column_link('firstName', 'First Name')}"></th>
-                <th th:replace="~{fragments :: column_link('lastName', 'Last Name')}"></th>
+                <th th:replace="~{fragments :: column_link('users', 'email', 'Email')}"></th>
+                <th th:replace="~{fragments :: column_link('users', 'firstName', 'First Name')}"></th>
+                <th th:replace="~{fragments :: column_link('users', 'lastName', 'Last Name')}"></th>
                 <th scope="col">Roles</th>
-                <th th:replace="~{fragments :: column_link('enabled', 'Enabled')}"></th>
+                <th th:replace="~{fragments :: column_link('users', 'enabled', 'Enabled')}"></th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
