--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brand_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brand_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: header(${title + ' - Shopme'})}">
+<head th:replace="~{fragments :: header(${title + ' - Shopme'}, 'none')}">
 </head>
 <body>
 <div class="container-fluid">
