--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/404.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-<head th:replace="~{fragments :: header('Shopme - Error')}"></head>
+<head th:replace="~{fragments :: header('Shopme - Error', 'none')}"></head>
 <body>
 <div class="container-fluid">
   <div th:replace="~{navigation :: menu('')}"></div>
