--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/account-form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/account-form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-<head th:replace="~{fragments :: header('Your Detail Accout')}">
+<head th:replace="~{fragments :: header('Your Detail Account', 'none')}">
 </head>
 <body>
 <div class="container-fluid">
