--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: header('Shopme - Users')}"></head>
+<head th:replace="~{fragments :: header('Shopme - Users', 'none')}"></head>
 <body>
 <div class="container-fluid">
 
